Changed artifact group, updated dependencies, added gradle-publish.yml